# StereoComplex

./: .gitignore  CONTRIBUTING.md  CahierDesCharges.md  LICENSE  README.md  pyproject.toml
Biblio/: ChatGPT_deep_20_01_26.docx  ChatGPT_deep_20_01_26.md
docs/: ALTERNATIVES_POSITIONING.md  ARCHITECTURE.md  CHARUCO_IDENTIFICATION.md  COMPRESSION_RECONSTRUCTION.md  CONVENTIONS.md  DATASET_SPEC.md  FIX_MY_CALIBRATION.md  LICENSE.md  Makefile  PUBLIC_API.md  PYCASO_Z_SWEEP.md  RAYFIELD3D_RECONSTRUCTION.md  RAYFIELD_VIRTUAL_RECTIFY.md  RAYFIELD_WORKED_EXAMPLE.md  RECONSTRUCTION_API.md  ROBUSTNESS_SWEEP.md  START_HERE.md  STEREO_RECONSTRUCTION.md  conf.py  index.rst  make.bat
docs/_static/: custom.css
docs/examples/: rayfield_charuco_end_to_end.py  reconstruction_api_demo.py
examples/: meta_example.json
paper/: README.md  build_pdflatex.sh  manuscript.tex  references.bib
paper/experiments/: calibrate_central_rayfield3d_from_images.py  compare_3d_from_images_rayfield2d.py  compare_charuco_methods.py  compare_compression_3d_methods.py  compare_opencv_calibration_rayfield.py  (+12 more)
tests/: conftest.py  test_charuco_detector_config.py  test_dataset_validate.py  test_geometry.py  test_image_io.py  test_meta.py  test_process_pipeline.py  test_public_api.py  test_zernike_rayfield.py
validation/: pycaso_images_example_opencv.json  pycaso_real_z_sweep_clean.json  pycaso_real_z_sweep_jpeg_q30.json  pycaso_real_z_sweep_rayfield3d.json  pycaso_real_z_sweep_rayfield3d.py  pycaso_real_z_sweep_webp_q70.json  rayfield_virtual_rectify_sanity.py  real_world_protocol.md
(+47 files in other folders)
